--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node examples/server.js"
+    "dev": "node examples/server.js",
+    "postinstall": "$(npm bin)/typings install"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +20,7 @@
     "react-router-bootstrap": "^0.20.1",
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.9",
+    "typings": "^0.7.9",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
